开发客户端用户私信模块和管理端歌曲，专辑，歌手模块功能